# furms

./: .env-example  .gitignore  Cargo.toml  Furms-example.yml  README.md  go.mod  go.sum  main.go
config/: config.go
frontend/: next.config.js  package-lock.json  package.json
frontend/components/: ConnectionRequired.tsx  DrawerNav.tsx  EditQuestion.tsx  NumberInput.tsx  PasswordRequired.tsx  Question.tsx
frontend/pages/: [id].tsx  _app.tsx  index.tsx
frontend/pages/@me/: forms.tsx
frontend/pages/forms/: [id].tsx  new.tsx
frontend/pages/forms/[id]/: manage.tsx  questions.tsx  responses.tsx
frontend/types/: types.ts
internal/: api.go  models.go  permissions.go  web.go  web_auth.go  web_me.go
migrations/: 20220613020735_create_forms.up.sql  20220613040438_add_form_descriptions.down.sql  20220613040438_add_form_descriptions.up.sql  20220613192356_add_form_questions2.up.sql  20220614225829_update_form_questions.up.sql  20220615021000_add_form_responses.up.sql  20220618234832_update_form_add_descriptions_and_one_response.up.sql  20220620014548_create_initial_tables.down.sql  20220620014548_create_initial_tables.up.sql  20220620114920_add_response_limit_to_forms.down.sql  20220620114920_add_response_limit_to_forms.up.sql  20220712165944_create_users_forms_and_sessions.sql
migrations/old/: 20220618012740_add_users_and_sessions.up.sql  20220618023520_update_users.up.sql
models/: forms.go
shared/: shared.go
src/: config.rs  main.rs
src/models/: db.rs  forms.rs  mod.rs  users.rs
