[package]
name = "catdoor"
version = "0.1.0"
edition = "2021"
authors = ["ibx34"]

[dependencies]
actix-web = "4.0.1"
tokio = { version = "1.18.1", default-features = false, features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
serde = { version = "1.0.137", features = ["derive"] }
serde_repr = "0.1.8"
serde_json = { version = "1.0.81", features = ["raw_value"] }
serde_yaml = "0.8.25"
futures = { version = "0.3.21", default-features = false, features = ["std","async-await"] }
once_cell = "1.10.0"
uuid = { version = "1.0.0", features = ["v4","serde"]}
sqlx = { version = "0.5.13", features = ["postgres", "migrate", "macros", "runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json", "decimal"]}
anyhow = "1.0.57"
time = "0.3.9"
reqwest = {version = "0.11.10", features = ["json", "serde_json", "deflate", "rustls-tls-webpki-roots"] }
regex = { version = "1.5.5" }
redis = { version = "0.21.5" }
chrono = { version = "0.4.19", features = ["serde"]}
actix-multipart = "0.4.0"
image = "0.24.2"
rust-s3 = { version = "0.31.0" }
sha2 = "0.10.2"
hex = { version = "0.4.3", features = ["serde"]}
ring = { version = "=0.16.20"}
sha3 = "0.10.1"
actix-http = "3.0.4"
rust_decimal = { version = "1.23.1", features = [
    "db-tokio-postgres",
    "db-postgres",
] }
bitflags = "1.3.2"
dotenv = "0.15.0"
